the wifi is shit

--- a/src/styles/util/colors.css
+++ b/src/styles/util/colors.css
@@ -5,11 +5,12 @@
     --color-dh-white: #ddd;
     --color-dh-black: #161616;
     --color-dh-light-gray: #d9d9d9;
+    --color-dh-dark-gray: #696969;
+    --color-dh-gray: #c4c4c4;
     --color-dh-green: #72db31;
     --color-dh-red: darkred;
     --color-dh-light-pink: salmon;
     --color-dh-orange: #e77236;
     --color-dh-blue: #326dee;
     --color-dh-pink: #ffd7ba;
-    --color-dh-gray: #c4c4c4;
 }
