--- a/src/styles/util/components.css
+++ b/src/styles/util/components.css
@@ -7,6 +7,8 @@
         font-family: var(--font-space-mono);
         font-weight: bold;
         height: 2.25rem;
+        justify-items: center;
+        align-items: center;
         /* color: var(--color-dh-black); */
         /* flex-shrink-0 bg-dh-light-gray   font-bold text-center; */
     }
