tried centering images

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,6 +34,10 @@ body {
   cursor: url("/assets/vectors/pointer-8bit.svg") 8 0, auto;
 }
 
+button:focus {
+  outline: none;
+}
+
 canvas {
   display: block;
 }
