stuff i'm commit cause vavi made me do this challenge

--- a/src/routes/(pages)/blog/blog.css
+++ b/src/routes/(pages)/blog/blog.css
@@ -61,7 +61,7 @@
     } */
   }
 
-  .blog__item--hover:hover span {
+  .blog__item--hover:hover .blog__item__underline {
     background-color: var(--color-dh-black) !important;
   }
 }
